@@ -1180,8 +1180,8 @@ POSIX:SETPGRP
 setpgrp
 POSIX:GETSID
 getsid
-POSIX:SETPGID
-setpgid
+POSIX:GETPGID
+getpgid
 POSIX:ENDUTXENT
 endutxent
 POSIX:GETUTXENT
