@@ -525,59 +525,60 @@
  </simpara></listitem></varlistentry>
  <varlistentry id="setlogmask"><term><code>(POSIX:SETLOGMASK
     maskpri)</code></term>
-  <listitem><simpara>calls <function role="unix">setlogmask</function>
+  <listitem><simpara>Calls <function role="unix">setlogmask</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="syslog"><term><code>(POSIX:SYSLOG severity facility
     &fmt-r; &rest-amp; &args-r;)</code></term>
-  <listitem><simpara>calls <function role="unix">syslog</function> on
-    <code>(&apply; &format; &nil; &fmt-r; &args-r;)</code></simpara>
+  <listitem><simpara>Calls <function role="unix">syslog</function> on
+    <code>(&apply; &format; &nil; &fmt-r; &args-r;)</code>.</simpara>
    <simpara>No <literal role="data">%</literal> conversion is performed,
     you must do all formatting in Lisp.</simpara></listitem></varlistentry>
  <varlistentry id="closelog"><term><code>(POSIX:CLOSELOG)</code></term>
-  <listitem><simpara>calls <function role="unix">closelog</function>
+  <listitem><simpara>Calls <function role="unix">closelog</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="kill"><term><code>(POSIX:KILL &pid-r; &sig-r;)</code></term>
-  <listitem><simpara>calls <function role="unix">kill</function>
+  <listitem><simpara>Calls <function role="unix">kill</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="getpgrp"><term><code>(POSIX:GETPGRP)</code></term>
-  <listitem><simpara>calls <function role="unix">getpgrp</function>
+  <listitem><simpara>Calls <function role="unix">getpgrp</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="setpgrp"><term><code>(POSIX:SETPGRP)</code></term>
-  <listitem><simpara>calls <function role="unix">setpgrp</function>;
+  <listitem><simpara>Calls <function role="unix">setpgrp</function>;
     on non-POSIX systems where it requires 2 arguments (legacy
-    BSD-style), it is called as <code>setpgrp(0,0)</code>
+    BSD-style), it is called as <code>setpgrp(0,0)</code>.
  </simpara></listitem></varlistentry>
  <varlistentry id="getsid"><term><code>(POSIX:GETSID &pid-r;)</code></term>
-  <listitem><simpara>calls <function role="unix">getsid</function>
+  <listitem><simpara>Calls <function role="unix">getsid</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="setsid"><term><code>(POSIX:SETSID)</code></term>
-  <listitem><simpara>calls <function role="unix">setsid</function>
+  <listitem><simpara>Calls <function role="unix">setsid</function>.
  </simpara></listitem></varlistentry>
- <varlistentry id="setpgid"><term><code>(POSIX:SETPGID
-    &pid-r; <replaceable>pgid</replaceable>)</code></term>
-  <listitem><simpara>calls <function role="unix">setpgid</function>
- </simpara></listitem></varlistentry>
+ <varlistentry id="getpgid"><term><code>(POSIX:GETPGID &pid-r;)</code></term>
+  <term><code>(&setf; (POSIX:GETPGID
+    &pid-r;) <replaceable>pgid</replaceable>)</code></term>
+  <listitem><simpara>Call <function role="unix">getpgid</function> and
+   <function role="unix">setpgid</function>.</simpara></listitem></varlistentry>
  <varlistentry id="endutxent"><term><code>(POSIX:ENDUTXENT)</code></term>
-  <listitem><simpara>calls <function role="unix">endutxent</function>
+  <listitem><simpara>Calls <function role="unix">endutxent</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="getutxent"><term><code>(POSIX:GETUTXENT
     &optional-amp; utmpx)</code></term>
-  <listitem><simpara>calls <function role="unix">getutxent</function>,
+  <listitem><simpara>Calls <function role="unix">getutxent</function>,
     returns a &structure-object-t; of
     type <type>POSIX:UTMPX</type>, which can be passed to subsequent calls to
     this function and re-used.</simpara></listitem></varlistentry>
  <varlistentry id="getutxid"><term><code>(POSIX:GETUTXID id)</code></term>
-  <listitem><simpara>calls <function role="unix">getutxid</function>,
-    the argument is filled and returned</simpara></listitem></varlistentry>
+  <listitem><simpara>Calls <function role="unix">getutxid</function>,
+    the argument is filled and returned.</simpara></listitem></varlistentry>
  <varlistentry id="getutxline"><term><code>(POSIX:GETUTXLINE line)</code></term>
-  <listitem><simpara>calls <function role="unix">getutxline</function>,
-    the argument is filled and returned</simpara></listitem></varlistentry>
+  <listitem><simpara>Calls <function role="unix">getutxline</function>,
+    the argument is filled and returned.</simpara></listitem></varlistentry>
  <varlistentry id="pututxline"><term><code>(POSIX:PUTUTXLINE
     utmpx)</code></term>
-  <listitem><simpara>calls <function role="unix">pututxline</function>,
-    the argument is filled and returned</simpara></listitem></varlistentry>
+  <listitem><simpara>Calls <function role="unix">pututxline</function>,
+    the argument is filled and returned.</simpara></listitem></varlistentry>
  <varlistentry id="setutxent"><term><code>(POSIX:SETUTXENT)</code></term>
-  <listitem><simpara>calls <function role="unix">setutxent</function>
+  <listitem><simpara>Calls <function role="unix">setutxent</function>.
  </simpara></listitem></varlistentry>
  <varlistentry id="getuid"><term><code>(POSIX:GETUID)</code></term>
   <term><code>(&setf; (POSIX:GETUID) &uid-r;)</code></term>
@@ -610,7 +611,7 @@
  </simpara></listitem></varlistentry>
  <varlistentry id="mkstemp"><term><code>(POSIX:MKSTEMP &filename-r;
     &key-amp; &direction-k; &eltype; &extfmt; &buffered;)</code></term>
-  <listitem><simpara>calls <function role="unix">mkstemp</function>,
+  <listitem><simpara>Calls <function role="unix">mkstemp</function>,
     returns a &file-stream-t;.</simpara>
    <simpara>&direction-k; should allow output.</simpara>
    <simpara>When <function role="unix">mkstemp</function> is missing,
